Fix navbar contrast, set consistent primary color, change red buttons to blue

--- a/_sass/default/core/bootswatch/variables.scss
+++ b/_sass/default/core/bootswatch/variables.scss
@@ -27,8 +27,8 @@ $red: #cf3755 !default;
 $orange: #fd7e14 !default;
 $yellow: #ffc906 !default;
 $green: #43ac6a !default;
-$teal: #3cadae !default;
-$cyan: #30a0d7 !default;
+$teal: #1e98d1 !default;
+$cyan: #1e98d1 !default;
 
 $primary: $cyan !default;
 $secondary: $gray-200 !default;
